fix: fix downloads animation causing the hero to "re-align"
Also fixed a lot of logic within the code.

--- a/src/shared/components/hero-section/index.module.css
+++ b/src/shared/components/hero-section/index.module.css
@@ -118,17 +118,17 @@
 
         & .infoContainer {
             width: 100%;
+            min-height: 60px;
             margin-top: 2%;
             padding-bottom: calc(var(--bottom-half-height) * 2);
-            opacity: 1;
+            opacity: 0;
             color: var(--color-light-blue);
             font-family: var(--typography-roboto-text-font);
             font-size: var(--typography-text-size-mobile);
             transition: opacity var(--info-transition-duration) ease;
 
-            &.hidden {
-                opacity: 0;
-                transition: opacity 0ms ease;
+            &.show {
+                opacity: 1;
             }
 
             & div {
